--- a/api_gateway/docker-compose.yml
+++ b/api_gateway/docker-compose.yml
@@ -5,13 +5,13 @@ services:
     ports:
     - "8080:8080"
     environment:
-      USER_URL: 192.168.99.100
-      USER_PORT: 8081
       RECIPES_URL: 192.168.99.100
-      RECIPES_PORT: 8082
-      SUPPILERS_URL: 192.168.99.100
-      SUPPILERS_PORT: 8083
-      FORUMS_URL: 192.168.99.100
-      FORUMS_PORT: 8084
-      INGREDIENTS_URL: 192.168.99.100
-      INGREDIENTS_PORT: 8085
+      RECIPES_PORT: 8081
+      COLLECTIONS_URL: 192.168.99.100
+      COLLECTIONS_PORT: 8082
+      USER_URL: 192.168.99.100
+      USER_PORT: 8083
+      NOTIFICATIONS_URL: 192.168.99.100
+      NOTIFICATIONS_PORT: 8084
+      COMMENTS_URL: 192.168.99.100
+      COMMENTS_PORT: 8085
