--- a/api_gateway/docker-compose.yml
+++ b/api_gateway/docker-compose.yml
@@ -9,8 +9,8 @@ services:
       RECIPES_PORT: 8081
       COLLECTIONS_URL: 192.168.99.100
       COLLECTIONS_PORT: 8082
-      USER_URL: 192.168.99.100
-      USER_PORT: 8083
+      USERS_URL: 192.168.99.100
+      USERS_PORT: 8083
       NOTIFICATIONS_URL: 192.168.99.100
       NOTIFICATIONS_PORT: 8084
       COMMENTS_URL: 192.168.99.100
