--- a/users_ms/config/database.yml
+++ b/users_ms/config/database.yml
@@ -7,7 +7,7 @@
 default: &default
   # adapter: postgresql
   encoding: unicode
-  adapter: sqlite3
+  adapter: postgresql
   # username: postgres
   # password: password
   # host: users_db
@@ -16,15 +16,15 @@ default: &default
 
 development:
   <<: *default
-  database: users_db
+  database: users_ms_development
 
 # Warning: The database defined as "test" will be erased and
 # re-generated from your development database when you run "rake".
 # Do not set this db to the same as development or production.
 test:
   <<: *default
-  database: users_db
+  database: users_ms_test
 
 production:
   <<: *default
-  database: users_db
+  database: users_ms_production
