--- a/users_ms/config/database.yml
+++ b/users_ms/config/database.yml
@@ -5,12 +5,11 @@
 #   gem 'sqlite3'
 #
 default: &default
-  # adapter: postgresql
-  encoding: unicode
   adapter: postgresql
-  # username: postgres
-  # password: password
-  # host: users_db
+  encoding: unicode
+  username: postgres
+  password: password
+  host: users_db
   pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
   timeout: 5000
 
