--- a/users_ms/docker-compose.yml
+++ b/users_ms/docker-compose.yml
@@ -1,22 +1,22 @@
 version: "3"
 services:
-  web:
-    build: .
-    command: bundle exec rails s -p 8083 -b 0.0.0.0
-    ports:
-      - "8083:8083"
-    volumes:
-    - .:/users_ms
-    depends_on:
-    - users_db
-    environment:
-      LDAP_HOST: 192.168.99.100
-      LDAP_PORT: 389
-      LDAP_ADMIN_PASSWORD: admin
-
   users_db:
     image: postgres
     ports:
     - "5432:5432"
     environment:
      POSTGRES_PASSWORD: password
+
+
+  users_ms:
+    build: .
+    command: bash -c "sleep 60 && rails db:create && rails db:migrate && rails s -p 8083 -b 0.0.0.0"
+    ports:
+      - "8083:8083"
+    depends_on:
+      - users_db
+      # - ldap_server
+    environment:
+      LDAP_HOST: 192.168.99.100
+      LDAP_PORT: 389
+      LDAP_ADMIN_PASSWORD: admin
